auth/infrastructure/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: default
  labels:
    app: authentik-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      securityContext:
        runAsNonRoot: true
      volumes:
        - name: blueprints
          configMap:
            name: authentik-config
            items:
              - key: oidc-provider.yaml
                path: oidc-provider.yaml
              - key: passwordless-sms-enrollment.yaml
                path: passwordless-sms-enrollment.yaml
              - key: passwordless-sms-login.yaml
                path: passwordless-sms-login.yaml
              - key: username-password-enrollment.yaml
                path: username-password-enrollment.yaml
        - name: certs
          secret:
            secretName: authentik-certs
            items:
              - key: oidc_public.pem
                path: pub/oidc_public.pem
              - key: oidc_private.pem
                path: priv/oidc_private.pem
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: "512Mi"
      containers:
        - name: authentik-worker
          securityContext:
            allowPrivilegeEscalation: false
          image: ghcr.io/goauthentik/server:2026.2.1
          command: ["dumb-init", "--", "ak"]
          args: ["worker"]
          volumeMounts:
            - name: blueprints
              mountPath: /blueprints/custom
            - name: certs
              mountPath: /certs
            - name: shm
              mountPath: /dev/shm
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
