auth/infrastructure/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql
  namespace: default
spec:
  selector:
    app: authentik-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
