auth/infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "authentik-backend-config"}'
spec:
  selector:
    app: authentik-server
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
