auth/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: default
  annotations:
    networking.gke.io/managed-certificates: authentik-managed-cert
spec:
  rules:
    - host: authentik.staging.bf.citylab-berlin.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 9000
